samples/_failures_safe/1761197858_72c6b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85f40479.c: In function ‘main’:
./samples/SAFE/__tmp_85f40479.c:160:13: error: expected declaration or statement at end of input
  160 |             printf("Invalid log format. Please use: YYYY-MM-DD HH:MM:SS LEVEL message\n");
      |             ^~~~~~
./samples/SAFE/__tmp_85f40479.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85f40479.c:160:13: error: expected declaration or statement at end of input
